// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WebVitals render matches snapshot 1`] = `
<div>
  <div
    class="sc-gsnTZi viDgA"
  >
    <div
      aria-label="TTFB"
      title="Time to first byte"
    >
      <div
        aria-hidden="true"
        class="sc-bczRLJ gCvKGl"
        role="tooltip"
      >
        <b>
          Time to first byte.
        </b>
        <br />
        <small>
          <i>
            The time between the request for a resource and when the first byte of a response begins to arrive
          </i>
        </small>
        <br />
        Needs improvement
        . 
        1
        ms
        <br />
        fetch: 
        <br />
        domain_lookup: 
        <br />
        connect: 
        <br />
        request:
        <br />
        response: 
        <br />
        DOM Content loaded: 
        <br />
        DOM complete:
        <br />
        load start: 
      </div>
      TTFB 
      <div
        class="sc-dkzDqf hIlCzH"
      />
    </div>
    <div
      aria-label="FCP"
      title="First Contentful Paint"
    >
      <div
        aria-hidden="true"
        class="sc-bczRLJ gCvKGl"
        role="tooltip"
      >
        <b>
          First Contentful Paint
        </b>
        <br />
        <small>
          <i>
            The time from when the page starts loading to when any part of the page's content is rendered on the screen
          </i>
        </small>
        <br />
        Poor
        . 
        0.001
        s
      </div>
      FCP 
      <div
        class="sc-dkzDqf kMUnSg"
      />
    </div>
    <div
      aria-label="LCP"
      title="Largest Contentful Paint"
    >
      <div
        aria-hidden="true"
        class="sc-bczRLJ gCvKGl"
        role="tooltip"
      >
        <b>
          Largest Contentful Paint.
        </b>
        <br />
        <small>
          <i>
            The render time of the largest image or text block visible within the viewport, relative to when the page first started loading.
          </i>
        </small>
        <br />
        Poor
        . 
        0.001
        s
      </div>
      LCP 
      <div
        class="sc-dkzDqf kMUnSg"
      />
    </div>
    <div
      aria-label="FID"
      title="First Input Delay"
    >
      <div
        aria-hidden="true"
        class="sc-bczRLJ gCvKGl"
        role="tooltip"
      >
        <b>
          First Input Delay.
        </b>
        <br />
        <small>
          <i>
            The time from when a user first interacts with a page to the time when the browser is actually able to begin processing event handlers in response to that interaction.
          </i>
        </small>
        <br />
        <small>
          * Not reported if the user never interacts with the page
        </small>
        <br />
        unknown
        . 
        1
        ms
      </div>
      FID 
      <div
        class="sc-dkzDqf bHgFrR"
      />
    </div>
    <div
      aria-label="CLS"
      title="Cumulative Layout Shift"
    >
      <div
        aria-hidden="true"
        class="sc-bczRLJ gCvKGl"
        role="tooltip"
      >
        <b>
          Cumulative Layout Shift.
        </b>
        <br />
        <small>
          <i>
            Measure of the largest burst of layout shift scores for every unexpected layout shift that occurs during the entire lifespan of a page.
          </i>
        </small>
        <br />
        Good
        . 
         timestamp: 
      </div>
      CLS 
      <div
        class="sc-dkzDqf cstiIh"
      />
    </div>
  </div>
</div>
`;

exports[`WebVitals shows tooltip on mouseover 'CLS' 1`] = `
<div
  aria-hidden="false"
  class="sc-bczRLJ dSgkou"
  role="tooltip"
>
  <b>
    Cumulative Layout Shift.
  </b>
  <br />
  <small>
    <i>
      Measure of the largest burst of layout shift scores for every unexpected layout shift that occurs during the entire lifespan of a page.
    </i>
  </small>
  <br />
  Good
  . 
   timestamp: 
</div>
`;

exports[`WebVitals shows tooltip on mouseover 'FCP' 1`] = `
<div
  aria-hidden="false"
  class="sc-bczRLJ dSgkou"
  role="tooltip"
>
  <b>
    First Contentful Paint
  </b>
  <br />
  <small>
    <i>
      The time from when the page starts loading to when any part of the page's content is rendered on the screen
    </i>
  </small>
  <br />
  Poor
  . 
  0.001
  s
</div>
`;

exports[`WebVitals shows tooltip on mouseover 'FID' 1`] = `
<div
  aria-hidden="false"
  class="sc-bczRLJ dSgkou"
  role="tooltip"
>
  <b>
    First Input Delay.
  </b>
  <br />
  <small>
    <i>
      The time from when a user first interacts with a page to the time when the browser is actually able to begin processing event handlers in response to that interaction.
    </i>
  </small>
  <br />
  <small>
    * Not reported if the user never interacts with the page
  </small>
  <br />
  unknown
  . 
  1
  ms
</div>
`;

exports[`WebVitals shows tooltip on mouseover 'LCP' 1`] = `
<div
  aria-hidden="false"
  class="sc-bczRLJ dSgkou"
  role="tooltip"
>
  <b>
    Largest Contentful Paint.
  </b>
  <br />
  <small>
    <i>
      The render time of the largest image or text block visible within the viewport, relative to when the page first started loading.
    </i>
  </small>
  <br />
  Poor
  . 
  0.001
  s
</div>
`;

exports[`WebVitals shows tooltip on mouseover 'TTFB' 1`] = `
<div
  aria-hidden="false"
  class="sc-bczRLJ dSgkou"
  role="tooltip"
>
  <b>
    Time to first byte.
  </b>
  <br />
  <small>
    <i>
      The time between the request for a resource and when the first byte of a response begins to arrive
    </i>
  </small>
  <br />
  Needs improvement
  . 
  1
  ms
  <br />
  fetch: 
  <br />
  domain_lookup: 
  <br />
  connect: 
  <br />
  request:
  <br />
  response: 
  <br />
  DOM Content loaded: 
  <br />
  DOM complete:
  <br />
  load start: 
</div>
`;
